RESOLVED FIXED263734
Accelerate WTF::equal using NEON intrinsics
https://bugs.webkit.org/show_bug.cgi?id=263734
Summary Accelerate WTF::equal using NEON intrinsics
David Degazio
Reported 2023-10-26 10:56:16 PDT
rdar://117541948 Currently, our implementation of WTF::equal batches characters into 8-byte chunks whenever possible, with a tail checking for remaining 4-byte, 2-byte, and 1-byte suffixes. Given NEON is supported on all ARM64 chips, we should be able to improve comparison speed by using 16-byte SIMD vectors to compare whenever we have a long-enough string.
Attachments
David Degazio
Comment 1 2023-10-26 11:25:12 PDT
EWS
Comment 2 2023-10-27 14:10:52 PDT
Committed 269866@main (661be0f9c16d): <https://commits.webkit.org/269866@main> Reviewed commits have been landed. Closing PR #19599 and removing active labels.
Fujii Hironori
Comment 3 2023-10-27 18:57:14 PDT
Windows port regressed: Bug 263816 – REGRESSION(269866@main): StringCommon.h(87) : equal : SHOULD NEVER BE REACHED for Windows port
Note You need to log in before you can comment on or make changes to this bug.